# py-tools

./: .gitignore  README.md  build-windows.spec  eslint.config.js  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
apps/: app.py  app_menu.py  js_api.py  models.py  sub.py  test_js_api.py
apps/listeners/: drop_files_listener.py  window_event_listener.py
src/: App.css  App.tsx  bindings.ts  main.tsx  resizer.css
src/components/: AboutView.tsx  ErrView.tsx  HelpView.tsx  utils.ts
src/components/about/: AboutView.css  AboutView.tsx
src/components/help/: HelpView.css  HelpView.tsx
src/components/layouts/: AppLayout.tsx
src/components/layouts/golden/: GoldenLayoutView.tsx  useGoldenStore.ts
src/components/layouts/mosaic/: MosaicLayoutView.css  MosaicLayoutView.tsx  MosaicSettingListener.tsx  mosaicStore.ts
src/components/media/: media.ts  mediaStore.ts  useMediaStore.ts
src/components/media/menu/: menu.css
src/components/media/movie-player/: MovieDropListener.tsx  MoviePlayerView.tsx  MovieSettingListener.tsx  VideoView.tsx
src/components/media/movie_player/: MoviePlayListRowView.tsx  MoviePlayerView.css  MoviePlayerView.tsx  VideoView.tsx  moviePlayListStore.ts  selectedMoviePlayListStore.ts
src/components/media/music-player/: AudioView.tsx  (+4 more)
src/components/menu/: AppMenuView.css  AppMenuView.tsx
src/listeners/: AppListener.tsx  DropFilesListener.tsx  MenuListener.tsx  WindowEventListener.tsx
src/stores/: useAppStore.ts  useOnload.ts  useReceivedDropFilesStore.ts
src/types/: models.d.ts  pywebview.d.ts
(+38 files in other folders)
