[project]
name = "py-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pywebview==6.1",
    "pyinstaller",
    "setuptools",
    "pydantic",
    "pydantic-to-typescript",
    "pysubs2",
    "charset_normalizer",
    "portalocker",
    "wakepy"
]
